<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/jk"
    android:gravity="bottom"
    android:padding="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView9"
        android:layout_width="111dp"
        android:layout_height="75dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="248dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/m"
        app:srcCompat="@drawable/m" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="105dp"
        android:text="@string/my_athletic_coacher"
        android:textSize="24sp" />

    <TextView
        android:layout_width="273dp"
        android:layout_height="21dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="135dp"
        android:text="@string/www_myathleticcoacher_com"
        android:textSize="14sp" />

</LinearLayout>