<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nn"
    android:layerType="software"
    tools:context=".login">

    <TextView
        android:id="@+id/textViewl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/my_athletic_coacher"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"  />

    <EditText
        android:id="@+id/Coach_id"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:background="#000000"
        android:drawableStart="@android:drawable/sym_action_email"
        android:ems="10"
        android:hint="@string/coach_id"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#5CFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewl"
        app:layout_constraintVertical_bias="0.198" />

    <EditText
        android:id="@+id/Passwordl"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:background="#000000"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#5CFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Coach_id"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/login_bl"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:background="#FFFFFF"
        android:text="@string/login"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Passwordl"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/forgotPl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/forgot_password"
        android:textColor="#CDDC39"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPl" />

    <TextView
        android:id="@+id/textView19l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="55dp"
        android:text="@string/not_registered_sign_in_here"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bl" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/log_in_here"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewl" />

</androidx.constraintlayout.widget.ConstraintLayout>