<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardBackgroundColor="#FFFFFF"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView

            android:id="@+id/avatarIv"
            android:src="@mipmap/ic_face"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_name"
                android:textSize="18sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_email"
                android:textSize="18sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_phone_number"
                android:textSize="18sp"
                android:textColor="#000"/>

        </LinearLayout>
        
    </LinearLayout>

</androidx.cardview.widget.CardView>