<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MapActivity"
    tools:showIn="@layout/activity_map">


        <Button
            android:id="@+id/B_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital"
            android:onClick="onClick"/>


        <Button
            android:id="@+id/B_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants"
            android:layout_marginStart="85dp"
            android:onClick="onClick"/>


        <Button
            android:id="@+id/B_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:layout_marginStart="200dp"
            android:onClick="onClick"/>




    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.skyfishjy.library.RippleBackground

        android:id="@+id/ripple_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rb_color="#0099CC"
        app:rb_duration="3000"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_scale="6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo4"
            android:src="@drawable/ic_pin"
            android:translationY="-18dp" />
    </com.skyfishjy.library.RippleBackground>



  <!-- <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBar"
        style="@style/MaterialSearchBarLight"
        app:mt_speechMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:outlineProvider="bounds"
        app:mt_hint="Search a Place"
        app:mt_placeholder="Search a Place"
        app:mt_maxSuggestionsCount="10"
        app:mt_navIconEnabled="true"
        app:mt_navIconTint="#000000"
        app:mt_navIconUseTint="true"
        app:mt_placeholderColor="#000000"/>
-->


    <SearchView
        android:id="@+id/sv_location"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:iconifiedByDefault="false"
        android:outlineAmbientShadowColor="#000000"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="#000000"
        android:queryHint="Search.." />



    <Button
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="#1A6E1D"
        android:text="@string/find_play_grounds"
        android:textColor="#fff" />

   <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/myLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="280dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="20dp"
        android:src="@android:drawable/ic_menu_mylocation"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp" />-->


</RelativeLayout>